--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,8 @@ target 'PokedexFrontEnd' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   target 'PokedexFrontEndTests' do
     inherit! :search_paths
     # Pods for testing
